@@ -1,4 +1,4 @@
-.TH sbatch "1" "Slurm Commands" "May 2019" "Slurm Commands"
+.TH sbatch "1" "Slurm Commands" "August 2019" "Slurm Commands"
 
 .SH "NAME"
 sbatch \- Submit a batch script to Slurm.
@@ -568,6 +568,8 @@ partition's \fBOverSubscribe\fR option takes precedence over the job's option.
 Identify which environment variables from the submission environment are
 propagated to the launched application. By default, \fIall\fR are propagated.
 Multiple environment variable names should be comma separated.
+Values with nested commas should be enclosed within quotes (e.g.
+FOO='a,b,c',BAR='d,e,f').
 Environment variable names may be specified to propagate the current
 value (e.g. "\-\-export=EDITOR") or specific values
 may be exported (e.g. "\-\-export=EDITOR=/bin/emacs").
