@@ -432,51 +432,6 @@ static int _job_wait(uint32_t job_id)
 	return ec;
 }
 
-static char *_find_quote_token(char *tmp, char *sep, char **last)
-{
-	char *start;
-	int i, quote_single = 0, quote_double = 0;
-
-	xassert(last);
-	if (*last)
-		start = *last;
-	else
-		start = tmp;
-	if (start[0] == '\0')
-		return NULL;
-	for (i = 0; ; i++) {
-		if (start[i] == '\'') {
-			if (quote_single)
-				quote_single--;
-			else
-				quote_single++;
-		} else if (start[i] == '\"') {
-			if (quote_double)
-				quote_double--;
-			else
-				quote_double++;
-		} else if (((start[i] == sep[0]) || (start[i] == '\0')) &&
-			   (quote_single == 0) && (quote_double == 0)) {
-			if (((start[0] == '\'') && (start[i-1] == '\'')) ||
-			    ((start[0] == '\"') && (start[i-1] == '\"'))) {
-				start++;
-				i -= 2;
-			}
-			if (start[i] == '\0')
-				*last = &start[i];
-			else
-				*last = &start[i] + 1;
-			start[i] = '\0';
-			return start;
-		} else if (start[i] == '\0') {
-			error("Improperly formed environment variable (%s)",
-			      start);
-			*last = &start[i];
-			return start;
-		}
-
-	}
-}
 
 /* Propagate select user environment variables to the job.
  * If ALL is among the specified variables propagate
@@ -489,13 +444,13 @@ static void _env_merge_filter(job_desc_msg_t *desc)
 	char *save_env[2] = { NULL, NULL }, *tmp, *tok, *last = NULL;
 
 	tmp = xstrdup(sbopt.export_env);
-	tok = _find_quote_token(tmp, ",", &last);
+	tok = find_quote_token(tmp, ",", &last);
 	while (tok) {
 
 		if (xstrcasecmp(tok, "ALL") == 0) {
 			env_array_merge(&desc->environment,
 					(const char **)environ);
-			tok = _find_quote_token(NULL, ",", &last);
+			tok = find_quote_token(NULL, ",", &last);
 			continue;
 		}
 
@@ -515,7 +470,7 @@ static void _env_merge_filter(job_desc_msg_t *desc)
 				break;
 			}
 		}
-		tok = _find_quote_token(NULL, ",", &last);
+		tok = find_quote_token(NULL, ",", &last);
 	}
 	xfree(tmp);
 
