@@ -35,6 +35,7 @@ documents those changes that are of interest to users and administrators.
     different features.
  -- Fix talking to batch host on it's protocol version when using --batch.
  -- gres/mic plugin - add missing fini() function to clean up plugin state.
+ -- Fix "srun --export=" parsing to handle nested commas.
 
 * Changes in Slurm 19.05.2
 ==========================
